# Maximum-Clique-Solver

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh  compile.sh  main.cpp  test.sh  verify.py
benchmark/: README.md  benchmark.py  benchmark.sh  user_out.txt  verify.py
benchmark/data/: 001_random_160_2.dimacs  005_random_80_4.dimacs  006_polbooks.dimacs  008_random_20_4.dimacs  011_random_160_4.dimacs  012_random_320_2.dimacs  013_random_640_2.dimacs  018_random_40_16.dimacs  021_adjnoun.dimacs  022_random_1280_2.dimacs  024_random_160_8.dimacs  026_random_320_4.dimacs  027_football.dimacs  030_random_1280_4.dimacs  033_random_320_16.dimacs  034_random_640_8.dimacs  035_celegans_metabolic.dimacs  037_random_320_32.dimacs  039_random_1280_8.dimacs  040_random_640_32.dimacs  041_random_1280_16.dimacs  043_p2p-Gnutella31.dimacs  044_p_hat300-1.dimacs  046_random_40_32.dimacs  050_keller4.dimacs  051_brock200_3.dimacs  052_p_hat300-2.dimacs
benchmark/plotting_scripts/: aggregate_csv.py  compare_values.py  sort_csv.py
clique-solver/: boundings.cpp  boundings.h  branch_and_bound.cpp  branch_and_bound.h
clique-solver/lowerbounds/: lower_bounds.cpp  lower_bounds.h
clique-solver/orderings/: degeneracy_ordering.cpp  degeneracy_ordering.h
clique-solver/reductions/: color_branching.cpp  color_branching.h  few_common_neighbors.cpp  few_common_neighbors.h  k_core.cpp  k_core.h  k_truss.cpp  k_truss.h
clique-solver/solve/: bucket_sort.cpp  bucket_sort.h  rn.cpp  rn.h  solve_via_vc.cpp  solve_via_vc.h
clique-solver/upperbounds/: upper_bounds.cpp  upper_bounds.h
clisat/: cli_solve.cpp  cli_solve.h  find_max_clique.cpp  find_max_clique.h  solve.cpp  solve.h
clisat/filtering/: FILTCOL.cpp  FILTCOL.h  FILTSAT.cpp  FILTSAT.h
clisat/heuristic/: AMTS.cpp  AMTS.h
clisat/ordering/: degeneracy_ordering.cpp  degeneracy_ordering.h
clisat/partial_max_sat/: partial_max_sat.cpp  partial_max_sat.h
clisat/pruning/: ISEQ.cpp  ISEQ.h
data/: 000_random_10_4.dimacs  002_random_20_2.dimacs  003_random_40_4.dimacs  004_dolphins.dimacs  007_random_10_2.dimacs  009_random_40_2.dimacs  010_karate.dimacs  014_random_80_2.dimacs  015_random_10_8.dimacs  016_chesapeake.dimacs  017_random_20_8.dimacs  019_random_80_8.dimacs  020_random_40_8.dimacs  023_random_80_16.dimacs  025_random_640_4.dimacs  028_random_160_16.dimacs  029_random_320_8.dimacs  031_random_160_32.dimacs  032_random_80_32.dimacs  036_random_640_16.dimacs  038_random_20_16.dimacs  042_random_1280_32.dimacs
lmc/: lmc_solver.cpp  lmc_solver.h
lmc/branch_reductions/: color_branching.cpp  color_branching.h  inc_max_sat.cpp  inc_max_sat.h
portfolio-solver/: portfolio_solver.cpp  portfolio_solver.h
utils/: benchmark.cpp  benchmark.h  classifier.cpp  classifier.h  colors.h  debug_utils.cpp  debug_utils.h  tests.cpp  tests.h
vc-solver/: #graph.cpp#  CMakeLists.txt  Makefile  benchmark.cpp  benchmark.h  compile.sh  debug.cpp  debug.h  graph.cpp  graph.h  load.cpp  load.h  main.cpp  operation.cpp  operation.h  util.h
vc-solver/lowerbounds/: clique_cover.cpp  clique_cover.h
vc-solver/packing/: packing.cpp  packing.h
vc-solver/reductions/: deg_rules.cpp  deg_rules.h  desk.cpp  desk.h  kernel.cpp  kernel.h  unconfined.cpp  unconfined.h
vc-solver/solve/: branching.cpp  branching.h  solve.cpp  solve.h
